syntax = "proto3";
package hotel;

import "google/protobuf/wrappers.proto";

option go_package = "./protos";

message SingleRoom {
    int32 room_id = 1;
    string type = 2;
    float price = 3;
}

message Rooms {
    repeated SingleRoom rooms = 1;
}

message Hotel {
    int32 hotel_id = 1;
    int32 owner_id = 2;
    string name = 3;
    string location = 4;
}

message Contact {
    int32 user_id = 1;
    string telegram = 2;
    string email = 3;
}

service HotelService {
    rpc IsValidPersonID (google.protobuf.Int32Value) returns (google.protobuf.BoolValue);
    rpc IsValidHotelID (google.protobuf.Int32Value) returns (google.protobuf.BoolValue);
    rpc IsValidRoomID (google.protobuf.Int32Value) returns (google.protobuf.BoolValue);
    rpc GetAllRoomsInHotel (google.protobuf.Int32Value) returns (Rooms);
    rpc GetRoom (google.protobuf.Int32Value) returns (SingleRoom);
    rpc GetHotel (google.protobuf.Int32Value) returns (Hotel);
    rpc GetContact (google.protobuf.Int32Value) returns (Contact);
}